# Customer-Support-AI-Assistant

./: .gitignore  README.md  connection.py  pyproject.toml  requirements.txt  test_together_ocr.py
crawlers/: __init__.py  auth.py  drive_crawler.py  gmail_crawler.py  users.py
csv_query_engine/: __init__.py  csv_chunker.py  csv_executer.py  csv_session.py
csv_query_engine/data/: test.csv
file_preparation/: __init__.py
file_preparation/chunking/: chunker.py
file_preparation/embedding/: __init__.py  embedder.py  test_embedd.py  test_embedder_real.py  test_embedding_quality.py  test_qdrant_real.py
file_preparation/escalation/: __init__.py  handler.py
file_preparation/evaluation/: __init__.py  comparison_graph_streaming.py  judge.py  metrics.py  test_judge.py
file_preparation/feedback/: __init__.py  store.py
file_preparation/generation/: __init__.py  answer_generator.py  test_generation.py
file_preparation/indexing/: __init__.py  indexer.py  (+1 more)
file_processor/: __init__.py  api.py  auth_manager.py  captioner.py  cleaner.py  config.py  conversation_store.py  drive_store.py  extract.py  gemma4.py  groq_client.py  models.py  ocr.py  parser.py  testpaddle.py  ui.html
rag-ui/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: clean_csv_registry.py  create_admin.py  evaluate_rag.py  langsmith_eval.py  reset_drive_cache.py  test_groq_ocr.py  test_openrouter_ocr.py
tests/: conftest.py  test_admin_rbac.py  test_api.py  test_auth.py  test_buffer.py  test_chunker.py  test_csv_chunker.py  test_metrics.py  test_parser.py  test_store.py
(+40 files in other folders)
